Multiple changes to reduce warnings